<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_city">City Name</string>
    <string name="label_submit">Submit</string>
    <string name="label_location">Location</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_description">Description</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_wind">Wind</string>
    <string name="label_speed">Speed</string>
    <string name="label_deg">Degree</string>
    <string name="label_day">Day</string>
    <string name="label_eve">Evening</string>
    <string name="label_morn">Morning</string>
    <string name="label_night">Night</string>
    <string name="btn_location">Get My Location</string>

</resources>